done progress bar

--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -22,7 +22,7 @@
     <LinearLayout
 
         android:orientation="vertical"
-        android:background="@drawable/bg"
+        android:background="@drawable/hmpg_bg"
         android:weightSum="10"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
