--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -1,9 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-    <LinearLayout android:padding="20dp" android:background="@drawable/pooling" android:layout_height="160dp" android:layout_width="match_parent" android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android">
+    <LinearLayout
+    android:padding="20dp"
+    android:background="@drawable/drawer_bg"
+    android:layout_height="160dp"
+    android:layout_width="match_parent"
+    android:orientation="vertical"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <ImageView android:layout_height="75dp" android:layout_width="75dp" android:src="@drawable/ic_eye"/>
+    <ImageView
+        android:layout_height="75dp"
+        android:layout_width="75dp"
+        android:src="@drawable/image_not_found"/>
 
-    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_marginTop="5dp" android:textStyle="bold" android:textColor="#fff" android:text="saurav"/>
+    <TextView
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_marginTop="5dp"
+        android:textStyle="bold"
+        android:textColor="@color/black"
+        android:id="@+id/username"/>
 
 </LinearLayout>
