--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,5 +14,7 @@
     <color name="iron">#CCCCCC</color>
     <color name="primary">#E43F3F</color>
 
+    <color name="transparent">#00555555</color>
+
     <color name="navyblue">#0077e6</color>
 </resources>
