--- a/app/src/main/res/layout/activity_passenger_ride_list.xml
+++ b/app/src/main/res/layout/activity_passenger_ride_list.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -15,25 +14,19 @@
                 layout="@layout/toolbar"/>
 
 
-            <!--<TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:textSize="26sp"
-        android:text="Below ListView is populated from RETROFIT JSON Data"
-        android:textColor="#000"
-        />
--->
+
             <ListView
                 android:id="@+id/lv"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="10dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:layout_marginRight="15dp"
+                android:layout_marginLeft="15dp"
                 android:divider="@color/cardview_shadow_start_color"
-                android:dividerHeight="1dp"
+                android:dividerHeight="2dp"
                 android:footerDividersEnabled="false"
-                android:headerDividersEnabled="false" />
+                android:headerDividersEnabled="false"
+                />
 
 
 
