--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -14,7 +14,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="16dp">
 
@@ -27,7 +27,6 @@
                 android:layout_marginTop="56dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
-                android:contentDescription="logo"
                 android:src="@drawable/logo"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -38,7 +37,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="SIGN UP"
-                android:textAppearance="?android:textAppearanceLarge"
                 android:id="@+id/title_text"
                 android:gravity="center"
                 android:layout_marginTop="30dp"
@@ -49,7 +47,7 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:theme="@style/TextLabel"
+                android:theme="@style/TextAppearance.AppCompat.Medium.Inverse"
                 >
                 <EditText
                     android:layout_width="match_parent"
@@ -64,7 +62,7 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:theme="@style/TextLabel">
+                android:theme="@style/TextAppearance.AppCompat.Medium.Inverse">
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -79,7 +77,7 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:theme="@style/TextLabel">
+                android:theme="@style/TextAppearance.AppCompat.Medium.Inverse">
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -92,7 +90,7 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:theme="@style/TextLabel">
+                android:theme="@style/TextAppearance.AppCompat.Medium.Inverse">
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -105,7 +103,7 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:theme="@style/TextLabel">
+                android:theme="@style/TextAppearance.AppCompat.Medium.Inverse">
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -197,7 +195,7 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:theme="@style/TextLabel">
+                android:theme="@style/TextAppearance.AppCompat.Medium.Inverse">
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -219,14 +217,6 @@
                 style="@style/buttonstyle"
                 android:layout_marginBottom="30dp" />
 
-            <TextView android:id="@+id/link_login"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="24dp"
-                android:text="Already a member? Login"
-                android:gravity="center"
-                android:textSize="16dip"
-                android:textColor="@color/white"/>
 
         </LinearLayout>
 
