--- a/app/src/main/res/layout/retro_lv.xml
+++ b/app/src/main/res/layout/retro_lv.xml
@@ -56,12 +56,6 @@
             android:id="@+id/mobile"
             android:text="jkhjvgggv"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:id="@+id/date"
-            android:text="jkhjvgggv"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -77,7 +71,16 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:id="@+id/trip_id"
-            android:text="jkhjvgggv"/>
+            android:text="jkhjvgggv" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:id="@+id/amount"
+            android:text="jkhjvgggv"
+            android:layout_marginBottom="20dp"/>
+
 
     </LinearLayout>
 
