--- a/app/src/main/res/layout/retro_lv2.xml
+++ b/app/src/main/res/layout/retro_lv2.xml
@@ -61,6 +61,13 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:id="@+id/time"
+                android:text="jkhjvgggv" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:id="@+id/trip_id"
                 android:text="jkhjvgggv"
                 android:layout_marginBottom="20dp"/>
 
