--- a/app/src/main/res/layout/retro_lv1.xml
+++ b/app/src/main/res/layout/retro_lv1.xml
@@ -68,7 +68,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:id="@+id/request_id"
-            android:text="jkhjvgggv"/>
+            android:text="jkhjvgggv"
+            android:layout_marginBottom="20dp"/>
         <!--<LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
